--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome, explore my portfolio showcasing web development, design, and creative solutions. Contact me for collaborations and inquiries.">
+    <meta name="keywords" content="WEB DEVELOPER, HTML, CSS, FREELANCE, BOOTSTRAP, NODE, SASS, SEO, RESPONSIVE DESIGN, GIT, GITHUB">
     <!--icono-->
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <!--google fonts-->
@@ -62,27 +64,27 @@
                 <div class="col">
                     <h2 class="title">HOME</h2>
                 </div>
-                <div>
-                    <div class="container col">
+                <div class="div2">
+                    <div class="container col div3">
                         <p class="fuentam">
                             Im a junior web developer and Software Engineering student based in Argentina.
                         </p>
                     </div>
-                    <div class="container col ">
+                    <div class="container col div4">
                         <a href="./pages/projects.html"><input type="button" value="Projects" class="button"></a>
                     </div>
-                <div class="contevid col">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/0ucdLWYhdAc"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        allowfullscreen class="video"></iframe>
+                    <div class="contevid col div5">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/0ucdLWYhdAc"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen class="video"></iframe>
                     </div>
                 </div>
             </article>
         </section>
     </main>
     <footer class="footer">
-        <div class="piepag">
+        <div>
             <p>SOCIALS:</p>
             <a href="https://www.linkedin.com/in/bruno-morales-pessacq-722b3a218/" target="_blank"><img
                     src="./img/vecteezy_linkedin-logo-png-linkedin-icon-transparent-png_18930585_835.png" alt="Linkedin"
@@ -90,7 +92,7 @@
             <a href="https://github.com/BrunoMoralesP" target="_blank"><img src="./img/pngimg.com - github_PNG58.png"
                     alt="Github" class="img-social"></a>
             <a href="https://www.instagram.com/brunomorales_1/?hl=es" target="_blank"><img
-                    src="./img/639b3dafb544d6f061fcddd2d6686ddb.png" alt="instagram" class="img-social2"></a>
+                    src="./img/639b3dafb544d6f061fcddd2d6686ddb.png" alt="instagram" class="img-social img2"></a>
         </div>
         <div>
             <p>
