--- a/pages/references.html
+++ b/pages/references.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover my academic achievements and research projects demonstrating commitment to excellence.">
+    <meta name="keywords" content="WEB DEVELOPER, HTML, CSS, FREELANCE, BOOTSTRAP, NODE, SASS, SEO, RESPONSIVE DESIGN, GIT, GITHUB, UNLAM, REFERENCES, UNIVERSITY">
+    <!--icono-->
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+    <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&display=swap" rel="stylesheet">
@@ -13,7 +18,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- CSS -->
     <link rel="stylesheet" href="../css/styles.css">
     <title>References</title>
 </head>
@@ -63,18 +70,18 @@
                     </p>
                     <img src="../img/coderhouse.jpg" alt="img coderhouse logo" class="img img-tamanio">
                 </div>
-                <div class="center padb">
+                <div class="container padb">
                     <a href="../index.html#home" class="return"><input type="button" value="RETURN" class="button"></a>
                 </div>
                 </article>
         </section>
     </main>
     <footer class="footer">
-        <div class="piepag">
+        <div>
             <p>SOCIAL:</p>
             <a href="https://www.linkedin.com/in/bruno-morales-pessacq-722b3a218/" target="_blank"><img src="../img/vecteezy_linkedin-logo-png-linkedin-icon-transparent-png_18930585_835.png" alt="Linkedin" class="img-social"></a>
             <a href="https://github.com/BrunoMoralesP" target="_blank"><img src="../img/pngimg.com - github_PNG58.png" alt="Github" class="img-social"></a>
-            <a href="https://www.instagram.com/brunomorales_1/?hl=es" target="_blank"><img src="../img/639b3dafb544d6f061fcddd2d6686ddb.png" alt="instagram" class="img-social2"></a>
+            <a href="https://www.instagram.com/brunomorales_1/?hl=es" target="_blank"><img src="../img/639b3dafb544d6f061fcddd2d6686ddb.png" alt="instagram" class="img-social img2"></a>
         </div>
         <div>
             <p>
