--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
                 <div class="col">
                     <h2 class="title">HOME</h2>
                 </div>
-                <div class="div2">
-                    <div class="container col div3">
+                <div>
+                    <div class="container col">
                         <p class="fuentam">
                             Im a junior web developer and Software Engineering student based in Argentina.
                         </p>
                     </div>
-                    <div class="container col div4">
+                    <div class="container col">
                         <a href="./pages/projects.html"><input type="button" value="Projects" class="button"></a>
                     </div>
-                    <div class="contevid col div5">
+                    <div class="contevid col">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/0ucdLWYhdAc"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
