--- a/pages/about.html
+++ b/pages/about.html
@@ -73,16 +73,16 @@
                 <div class="about-content-skills col-12">
                     <h3 class="about-content-title skill-title">My Skills</h3>
                     <div class="skills col-12">
-                        <div class="skills-skill">HTML</div>
-                        <div class="skills-skill">CSS</div>
-                        <div class="skills-skill">C</div>
-                        <div class="skills-skill">Python</div>
-                        <div class="skills-skill">GIT</div>
-                        <div class="skills-skill">GitHub</div>
-                        <div class="skills-skill">Responsive Design</div>
+                            <button class="button2">HTML</button>
+                            <button class="button2">CSS</button>
+                            <button class="button2">C</button>
+                            <button class="button2">Python</button>
+                            <button class="button2">GIT</button>
+                            <button class="button2">GitHub</button>
+                            <button class="button2">SASS</button>
                     </div>
                 </div>
-                <div class="col-12">
+                <div class="col-12 contbut">
                     <a href="../index.html#home" class="return"><input type="button" value="RETURN"class="button"></a>
                 </div>
             </article>
@@ -94,8 +94,8 @@
             <a href="https://www.linkedin.com/in/bruno-morales-pessacq-722b3a218/" target="_blank"><img
                     src="../img/vecteezy_linkedin-logo-png-linkedin-icon-transparent-png_18930585_835.png"
                     alt="Linkedin" class="img-social"></a>
-            <a href="https://github.com/BrunoMoralesP" target="_blank"><img src="../img/pngimg.com - github_PNG58.png"
-                    alt="Github" class="img-social"></a>
+            <a href="https://github.com/BrunoMoralesP" target="_blank"><img src="../img/githublogowhite.png"
+                    alt="Github" class="img-social img2"></a>
             <a href="https://www.instagram.com/brunomorales_1/?hl=es" target="_blank"><img
                     src="../img/639b3dafb544d6f061fcddd2d6686ddb.png" alt="instagram" class="img-social img2"></a>
         </div>
