--- a/pages/references.html
+++ b/pages/references.html
@@ -80,7 +80,7 @@
         <div>
             <p>SOCIAL:</p>
             <a href="https://www.linkedin.com/in/bruno-morales-pessacq-722b3a218/" target="_blank"><img src="../img/vecteezy_linkedin-logo-png-linkedin-icon-transparent-png_18930585_835.png" alt="Linkedin" class="img-social"></a>
-            <a href="https://github.com/BrunoMoralesP" target="_blank"><img src="../img/pngimg.com - github_PNG58.png" alt="Github" class="img-social"></a>
+            <a href="https://github.com/BrunoMoralesP" target="_blank"><img src="../img/githublogowhite.png" alt="Github" class="img-social img2"></a>
             <a href="https://www.instagram.com/brunomorales_1/?hl=es" target="_blank"><img src="../img/639b3dafb544d6f061fcddd2d6686ddb.png" alt="instagram" class="img-social img2"></a>
         </div>
         <div>
