--- a/pages/references.html
+++ b/pages/references.html
@@ -56,21 +56,21 @@
     </header>
     <main class="main">
         <h2 class="title">REFERENCES</h2>
-        <section>
-            <article>
-                <div class="container">
+        <section class="container">
+            <article class="row">
+                <div class="container col-lg-5 col-12">
+                    <img src="../img/20201009-Logo-UNLaM-1024x942.jpg" alt="logo universidad de la matanza" class="img-tamanio">
                     <p class="fuentam">
                         I'm currently pursuing my Software Engineering degree with a strong focus on honing my programming skills and learning fundamental software development concepts at UnLaM.
                     </p>
-                    <img src="../img/20201009-Logo-UNLaM-1024x942.jpg" alt="logo universidad de la matanza" class="img-tamanio">
                 </div>
-                <div class="container">
+                <div class="container col-lg-5 col-12">
+                    <img src="../img/coderhouse.jpg" alt="img coderhouse logo" class="img img-tamanio">
                     <p class="fuentam">
                         I began my journey in CSS and HTML through the Web Developer course at Coderhouse. This comprehensive program provided me with a solid foundation in web development, enabling me to create captivating web pages.
                     </p>
-                    <img src="../img/coderhouse.jpg" alt="img coderhouse logo" class="img img-tamanio">
                 </div>
-                <div class="container padb">
+                <div class="container padb col-12">
                     <a href="../index.html#home" class="return"><input type="button" value="RETURN" class="button"></a>
                 </div>
                 </article>
